--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-ftp-push": "~0.1.2",
     "grunt-contrib-sass": "~0.4.1",
-    "grunt-contrib-watch": "~0.5.1"
+    "grunt-contrib-watch": "~0.5.1",
+    "grunt-remove-logging": "~0.1.1"
   }
 }
